--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
     <div class="container">
         <!-- Images -->
         <div class="media">
-            <img src="photo1.jpg" alt="Photo 1">
+            <img src="Photo1.jpg" alt="Photo 1">
         </div>
         <div class="media">
-            <img src="photo2.jpg" alt="Photo 2">
+            <img src="Photo2.jpg" alt="Photo 2">
         </div>
 
         <!-- Videos -->
